[package]
name = "mpu6050-dmp-demo-f4"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
nb = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp" }

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f411"]
version = "0.12.0"
